// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeAllPartialMembers fails when array values matches the members of the set 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeAllPartialMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to not have all of the following partial members:
  <green>[{"foo": "bar"}]</color>
Received:
  <red>[{"hello": "world"}, {"baz": "qux", "foo": "bar"}]</color>"
`;

exports[`.toIncludeAllPartialMembers fails when array values do not contain any of the members of the set 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAllPartialMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to have all of the following partial members:
  <green>[{"foo": "qux"}]</color>
Received:
  <red>[{"hello": "world"}, {"baz": "qux", "foo": "bar"}]</color>"
`;

exports[`.toIncludeAllPartialMembers fails when expected object is not an array 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAllPartialMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to have all of the following partial members:
  <green>1</color>
Received:
  <red>[{"hello": "world"}, {"baz": "qux", "foo": "bar"}]</color>"
`;

exports[`.toIncludeAllPartialMembers fails when given object is not an array 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAllPartialMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to have all of the following partial members:
  <green>[{"foo": "bar"}]</color>
Received:
  <red>1</color>"
`;
